src/Kubernetes/platforms-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: platforms-nodeport-service
spec:
    type: NodePort
    selector:
        app: platformservice
    ports:
    -   name: platformservice
        protocol: TCP
        port: 80
        targetPort: 80
