src/Kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    annotations: 
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        -   host: acme.com
            http: 
                paths: 
                    -   path: /api/platforms
                        pathType: Prefix
                        backend:
                            service:
                                name: platforms-clusterip-service
                                port:
                                    number: 80
                    -   path: /api/commands/platforms
                        pathType: Prefix
                        backend:
                            service:
                                name: commands-clusterip-service
                                port:
                                    number: 80
